webserver/kustomize/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: argocd
  name: <tbr>
