webserver/kustomize/base/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webserver
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
      - name: webserver
        image: webserver
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: http
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: http
          periodSeconds: 10
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: webserver-env
          mountPath: /usr/share/nginx/html/env.properties
          subPath: env.properties
      volumes:
      - name: webserver-env
        configMap:
          name: webserver
          items:
          - key: env.properties
            path: env.properties
