webserver/kustomize/base/service.yml
kind: Service
apiVersion: v1
metadata:
  name: webserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
