webserver/kustomize/base/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: webserver
  annotations: 
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect@kubernetescrd
spec:
  rules:
  - host: dummy
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webserver
            port:
              name: http
